<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvImei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/imei"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvImeiValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvImei"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvOperatorId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/operatorId"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvImei" />

    <TextView
        android:id="@+id/tvOperatorIdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvOperatorId"
        app:layout_constraintTop_toBottomOf="@+id/tvImeiValue"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvNetworkType"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/network_type"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOperatorId" />

    <TextView
        android:id="@+id/tvNetworkTypeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvNetworkType"
        app:layout_constraintTop_toBottomOf="@+id/tvOperatorIdValue"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvCid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/cellId"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNetworkType" />

    <TextView
        android:id="@+id/tvCidValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvCid"
        app:layout_constraintTop_toBottomOf="@+id/tvNetworkTypeValue"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvLac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/lac"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCid" />

    <TextView
        android:id="@+id/tvLacValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvLac"
        app:layout_constraintTop_toBottomOf="@+id/tvCidValue"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvSignal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/signal"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLac" />

    <TextView
        android:id="@+id/tvSignalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvSignal"
        app:layout_constraintTop_toBottomOf="@+id/tvLacValue"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/latitude"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignal" />

    <TextView
        android:id="@+id/tvLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvLatitude"
        app:layout_constraintTop_toBottomOf="@+id/tvSignalValue"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/longitude"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitude" />

    <TextView
        android:id="@+id/tvLongitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvLongitude"
        app:layout_constraintTop_toBottomOf="@+id/tvLatitudeValue"
        tools:text="TextView" />

    <Button
        android:id="@+id/btnStartSpeedTest"
        android:layout_width="219dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/startSpeedTestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDownaloadSpeedValue" />

    <TextView
        android:id="@+id/tvDownloadSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/downloadLabel"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedTestTitle" />

    <TextView
        android:id="@+id/tvDownaloadSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/tvDownloadSpeed"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedTestTitle"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvUploadSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/uploadSpeedLabel"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedTestTitle" />

    <TextView
        android:id="@+id/tvUploadSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toEndOf="@+id/tvUploadSpeed"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedTestTitle"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvSpeedTestTitle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/speedtestTitle"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />


</android.support.constraint.ConstraintLayout>